k8s/overlays/dev-vitess/patches/image-pull-policy.yaml
# Set imagePullPolicy to Never for local images
# This is applied to all Deployments in dev overlay
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boulder-wfe2
spec:
  template:
    spec:
      containers:
        - name: boulder-wfe2
          imagePullPolicy: Never
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boulder-ra
spec:
  template:
    spec:
      containers:
        - name: boulder-ra
          imagePullPolicy: Never
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boulder-sa
spec:
  template:
    spec:
      containers:
        - name: boulder-sa
          imagePullPolicy: Never
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boulder-ca
spec:
  template:
    spec:
      containers:
        - name: boulder-ca
          imagePullPolicy: Never
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boulder-va
spec:
  template:
    spec:
      containers:
        - name: boulder-va
          imagePullPolicy: Never
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boulder-rva1
spec:
  template:
    spec:
      containers:
        - name: boulder-rva
          imagePullPolicy: Never
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boulder-rva2
spec:
  template:
    spec:
      containers:
        - name: boulder-rva
          imagePullPolicy: Never
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boulder-rva3
spec:
  template:
    spec:
      containers:
        - name: boulder-rva
          imagePullPolicy: Never
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boulder-publisher
spec:
  template:
    spec:
      containers:
        - name: boulder-publisher
          imagePullPolicy: Never
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boulder-nonce-a
spec:
  template:
    spec:
      containers:
        - name: boulder-nonce
          imagePullPolicy: Never
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boulder-nonce-b
spec:
  template:
    spec:
      containers:
        - name: boulder-nonce
          imagePullPolicy: Never
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boulder-crl-updater
spec:
  template:
    spec:
      containers:
        - name: boulder-crl-updater
          imagePullPolicy: Never
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boulder-crl-storer
spec:
  template:
    spec:
      containers:
        - name: boulder-crl-storer
          imagePullPolicy: Never
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boulder-observer
spec:
  template:
    spec:
      containers:
        - name: boulder-observer
          imagePullPolicy: Never
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boulder-email-exporter
spec:
  template:
    spec:
      containers:
        - name: boulder-email-exporter
          imagePullPolicy: Never
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boulder-sfe
spec:
  template:
    spec:
      containers:
        - name: boulder-sfe
          imagePullPolicy: Never
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: challtestsrv
spec:
  template:
    spec:
      containers:
        - name: challtestsrv
          imagePullPolicy: Never
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ct-test-srv
spec:
  template:
    spec:
      containers:
        - name: ct-test-srv
          imagePullPolicy: Never
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pardot-test-srv
spec:
  template:
    spec:
      containers:
        - name: pardot-test-srv
          imagePullPolicy: Never
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: s3-test-srv
spec:
  template:
    spec:
      containers:
        - name: s3-test-srv
          imagePullPolicy: Never
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boulder-log-validator
spec:
  template:
    spec:
      containers:
        - name: boulder-log-validator
          imagePullPolicy: Never
