k8s/overlays/dev-vitess/patches/webpki-certs.yaml
# Add WebPKI certificates volume mount to services that need issuer certs
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boulder-ra
spec:
  template:
    spec:
      containers:
        - name: boulder-ra
          volumeMounts:
            - name: webpki-certs
              mountPath: /certs/webpki
              readOnly: true
      volumes:
        - name: webpki-certs
          configMap:
            name: boulder-webpki-certs
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boulder-wfe2
spec:
  template:
    spec:
      containers:
        - name: boulder-wfe2
          volumeMounts:
            - name: webpki-certs
              mountPath: /certs/webpki
              readOnly: true
      volumes:
        - name: webpki-certs
          configMap:
            name: boulder-webpki-certs
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boulder-publisher
spec:
  template:
    spec:
      containers:
        - name: boulder-publisher
          volumeMounts:
            - name: webpki-certs
              mountPath: /certs/webpki
              readOnly: true
      volumes:
        - name: webpki-certs
          configMap:
            name: boulder-webpki-certs
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boulder-crl-updater
spec:
  template:
    spec:
      containers:
        - name: boulder-crl-updater
          volumeMounts:
            - name: webpki-certs
              mountPath: /certs/webpki
              readOnly: true
      volumes:
        - name: webpki-certs
          configMap:
            name: boulder-webpki-certs
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boulder-crl-storer
spec:
  template:
    spec:
      containers:
        - name: boulder-crl-storer
          volumeMounts:
            - name: webpki-certs
              mountPath: /certs/webpki
              readOnly: true
      volumes:
        - name: webpki-certs
          configMap:
            name: boulder-webpki-certs
